# vhid-companion

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/controller/: application_command.rs  application_controller.rs  command_reader.rs  mod.rs  stdio_interface.rs
src/model/: application_model.rs  mod.rs  sdl_interface.rs  sysmodule_interface.rs
src/model/input/: gamepad.rs  manager.rs  mod.rs  script_event.rs
